--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,3 +14,5 @@ camunda.bpm:
     create: All Tasks
 #  default-serialization-format: application/json
 server.port: 8080
+
+listenerWithAnnotation: false
